; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/tests/extr_btrfs-tests.c_btrfs_new_test_inode.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/tests/extr_btrfs-tests.c_btrfs_new_test_inode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.inode = type { i32 }

@test_mnt = common dso_local global %struct.TYPE_2__* null, align 8
@S_IFREG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.inode* @btrfs_new_test_inode() #0 {
  %1 = alloca %struct.inode*, align 8
  %2 = load %struct.TYPE_2__*, %struct.TYPE_2__** @test_mnt, align 8
  %3 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %2, i32 0, i32 0
  %4 = load i32, i32* %3, align 4
  %5 = call %struct.inode* @new_inode(i32 %4)
  store %struct.inode* %5, %struct.inode** %1, align 8
  %6 = load %struct.inode*, %struct.inode** %1, align 8
  %7 = icmp ne %struct.inode* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load %struct.inode*, %struct.inode** %1, align 8
  %10 = load i32, i32* @S_IFREG, align 4
  %11 = call i32 @inode_init_owner(%struct.inode* %9, i32* null, i32 %10)
  br label %12

12:                                               ; preds = %8, %0
  %13 = load %struct.inode*, %struct.inode** %1, align 8
  ret %struct.inode* %13
}

declare dso_local %struct.inode* @new_inode(i32) #1

declare dso_local i32 @inode_init_owner(%struct.inode*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
